--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Lilpower est un projet d'étudiants de l'ECE Paris, Loïc Dalloz, Alexandre Brand, Jean-Charles Blind, Arthur Declerq et Romain Brewee.
 Ce projet a pour but de créer un logiciel de gestion de l'énergie pour une ville ou une structure autonome telle que la Lilypad de l'architecte Vincent Callebault.
-Les pogrammes et les sources présents dans ce répertoire sont à titre d'exemple, pour appliquer les systèmes théorique et sont la propriété de l'équipe du projet.
+Les pogrammes et les sources présents dans ce répertoire sont à titre d'exemple, pour appliquer les systèmes théorique et sont la propriété de l'équipe du projet. Ils ne sont en rien applicables sans modifications sur des systèmes réels.
